0.5.0:

2006-01-27  Murray Cumming  <murrayc@murrayc.com>

	* examples/pdf-surface/Makefile.am: Remove extra LDADD that was breaking 
	the distcheck.

2006-01-26  Murray Cumming  <murrayc@murrayc.com>

	* examples/ps-surface/main.cc:
	* examples/svg-surface/main.cc: Correct the text of the messages.

2006-01-25  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* configure.in:
	* examples/Makefile.am: 
	* examples/pdf-surface/: 
	* examples/ps-surface/: 
	* examples/svg-surface/: add examples for additional surfaces

2006-01-24  Murray Cumming  <murrayc@murrayc.com>

	* cairomm/Makefile.am:
	* cairomm/surface.cc:
	* cairomm/surface.h:
	* cairomm/xlib_surface.cc:
	* cairomm/xlib_surface.h:
	* cairomm/win32_surface.cc:
	* cairomm/win32_surface.h: Moved XlibSurface and 
	Win32Surface into separate files, not #included by 
	the main cairomm.h file, so that developers do not need to 
	suffer the Xlib.h or Windows namespace pollution unless they really need to. 
	For instance, this fixes the gtkmm 2.9 build which was broken by the 
	Display struct in Xlib.h.

2006-01-15  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* cairomm/surface.cc:
	* cairomm/surface.h: backwards-incompatible API change for the Surface
	types.  Cairo::Surface is now a base class for all of the other surface
	types, and should not be used directly.  New Surface types include
	ImageSurface, XlibSurface, Win32Surface, PdfSurface, PsSurface,
	SvgSurface, and GlitzSurface.  
	Modified Surface::write_to_png() and Surface::write_to_png_stream() so
	that they throw exceptions like the other functions instead of returning a
	cairo_status_t value.
	Added API documentation for all Surface classes and all member functions
	of the Surface class heirarchy.
	* examples/png_file/Makefile.am: added generated PNG file to CLEANFILES
	* examples/png_file/main.cc: updated the PNG example to use the new
	ImageSurface class instead of using the Surface class directly.