@@ -1,2 +1,6 @@
 Makefile.in
 Makefile
+*.lo
+*.la
+.deps
+.libs
